# Game-Window-Library

./: CMakeLists.txt  README.md
include/: GameWindow.h  GameWindowCore.h  GameWindowPrototypes.h
include/datastructures/: GameEventQueue.h
src/: CMakeLists.txt
src/datastructures/: CMakeLists.txt  GameEventQueue.c
src/linux/: CMakeLists.txt
src/linux/include/: linux.h
src/linux/src/: linux.c
src/mac/: CMakeLists.txt
src/mac/include/: mac.h
src/mac/src/: mac.c
src/win32/: CMakeLists.txt
src/win32/include/: win32glFunctionLoader.h
src/win32/src/: win32.c
tests/: CMakeLists.txt  callback.c  initialization.c  linking.c  lockMouseTest.c  main.c  openGLLoading.c  queueTests.c
